[package]
name = "russimp"
version = "3.2.1"
edition = "2024"
description = "Assimp bindings for rust"
exclude = ["*.bash", "/models"]

[lib]
name = "russimp"
path = "src/lib.rs"

[dependencies]
russimp-sys = { git = "https://github.com/Tecnio/russimp-sys" }

num-derive = "0.4"
num-traits = "0.2.15"
num_enum = "0.7.4"

derivative = "2.2.0"

strum = "0.27.1"
strum_macros = "0.27.1"

mint = { version = "0.5.9", optional = true }

[features]
default = []
prebuilt = ["russimp-sys/prebuilt"]
static-link = ["russimp-sys/static-link"]
nozlib = ["russimp-sys/nozlib"]

[package.metadata.docs.rs]
features = ["prebuilt"]
